fix: horizontal scrollbar

--- a/Styles.css
+++ b/Styles.css
@@ -23,6 +23,7 @@
 body {
     width: 100vw;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 /* Header --------------------------------------------------------------------------------------------------------------- Header*/
